# gpt_vs_human

./: .gitignore  pyproject.toml
notebooks/: creating_tfdataset.ipynb  explo_data.ipynb  export_bert.ipynb  recap_gpt.ipynb  testre.ipynb  training_w2v.ipynb  writingsummary.ipynb
thebattle/: bert.py  data.py  ds_creator.py  embeder.py  model.py
